fixed  index overlap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -202,14 +202,18 @@ input {
 
 .upload_wrap {
   display: flex;
+  height: fit-content;
+  height: 100vh;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-between;
+  gap: 12px;
   border-top: 30px solid #666666;
   border-bottom: 30px solid #55F5AF;
 }
 .upload {
   flex-basis: 32%;
+  height: 50vh;
+  align-self: stretch;
   margin: 2% 0 0% 0; 
   padding: 10px;
   border: 2px solid #202D85;
@@ -217,7 +221,7 @@ input {
   float: left;
 }
 img {
-  
+
 }
 .info {
   display: flex;
